fix|background color of selected cards in dark mode

--- a/styles/darkTheme.css
+++ b/styles/darkTheme.css
@@ -51,3 +51,23 @@ body.dark input[type='range']::-webkit-slider-thumb {
 body.dark .cards {
 background: var(--cards-color-bg-dark);
 }
+
+body.dark .cards.selected {
+  background: var(--cards-color-bg-selected);
+  transition: background 1s ease;
+}
+
+body.dark .cards.selected svg path {
+  fill: var(--button-darkmode-icon-selected);
+  transition: fill 1s ease;
+
+}
+
+
+body.dark .cards.selected input[type='range'],
+body.dark .cards.selected input[type='range']::-webkit-slider-runnable-track,
+body.dark .cards.selected input[type='range']::-webkit-slider-thumb {
+  background-color: var(--button-darkmode-icon-selected);
+  transition: background 1s ease;
+
+}
